--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -137,7 +137,7 @@ nav a span {
   height: 100%;
   min-height: 100%;
   padding: 20px;
-  background: #000;
+  background: #960505;
 }
 
 .sidebar-info-box {
@@ -159,7 +159,7 @@ nav a span {
 }
 
 .sidebar h5 {
-  color: #fefefe;
+  color: #640202;
   margin: 0 auto 0.5rem;
 }
 
@@ -167,7 +167,7 @@ nav a span {
   text-rendering: optimizeLegibility;
   line-height: 1.6;
   font-size: 14px;
-  color: #999
+  color: #be3d3d
 }
 
 .sidebar a {
@@ -184,8 +184,8 @@ nav a span {
   color: #fefefe;
   height: 40px;
   padding: 0.5rem;
-  background: #0a0a0a;
-  border-left: 1px solid #0a0a0a;
+  background: #961818;
+  border-left: 1px solid #852424;
 }
 
 .header span {
@@ -229,7 +229,7 @@ nav a span {
 
 .portfolio-intro h1 {
   font-size: 1.5rem;
-  color: #0a0a0a;
+  color: #961818;
   margin: 0 auto 8px;
 }
 
@@ -238,7 +238,7 @@ nav a span {
   font-size: 125%;
   margin: 0 auto;
   padding-bottom: 40px;
-  border-bottom: 1px solid #eaeaea;
+  border-bottom: 1px solid #5f1b1b;
 }
 
 .projects-box h5 {
@@ -247,7 +247,7 @@ nav a span {
   font-size: 13px;
   letter-spacing: 2.25px;
   text-transform: uppercase;
-  color: #222;;
+  color: #630f0f;;
   margin: 0 auto 8px;
 }
 
@@ -258,7 +258,7 @@ nav a span {
 .cell img {
   width: 100%;
   min-width: 100px;
-  border: 4px solid #fff;
+  border: 4px solid #5f0a0a;
   box-shadow: 0 0 0 1px rgba(10, 10, 10, 0.2);
 }
 
