--- a/views/about.pug
+++ b/views/about.pug
@@ -11,23 +11,16 @@ block content
     .inner-wrapper.flex-row-wrap.two-col
       .about-intro-box.box
 
-        //- Replace with your name
-        h1 Name
-
-        //- Feel free to personalize the title below
+        h1 Nathaniel Bennett
         p Full Stack JavaScript Developer
 
 
         .about-bio
-
-          //- Replace the boilerplate below with your best elevator pitch
-          p This is my elevator pitch. It is the elevator pitch to end all elevator pitches. Your mind is blown. Your mortal brain can scarcely process how well my prior experience maps to your open dev position. 
+          p I am a new developer that has dabbled in full stack development for years. I've used PHP with MySql and MSSql in the past -- I am currently using JavaScript to develop node based applications. I'm studying full stack content on teamtreehouse.com and am completing the "Tech Degree" program they offer. Previously I have had job experience in help desk analyst positions where projects often went outside the scope of my job description. I have had HIPAA compliance training in my help desk analyst role -- so knowing confidentiality protocol is familiar.
 
 
       .skills-contact-box.box
         h6 Skills
-
-        //- Replace skills below with your own skills — at this point, you should be able to list as many as ten skills
         ul
           li HTML
           li CSS
@@ -43,15 +36,13 @@ block content
 
         h6 Contact Info
 
-        //- Replace with your own contact info - feel free to use fake information if you prefer
         ul
-          li 555-555-1234
-          li email@email.com
+          li 541-640-9750
+          li bennenat@gmail.com
 
-        //- Add URLs to the hrefs below to link to your social media accounts - feel free to use non-personal links to social media home pages if you prefer
-        a.btn-link(href='') LinkedIn
-        a.btn-link(href='') GitHub
-        a.btn-link(href='') Twitter
+        a.btn-link(href='https://www.linkedin.com/in/nate-bennett-29214324/') LinkedIn
+        a.btn-link(href='https://github.com/Ubersp4m/') GitHub
+        a.btn-link(href='https://x.com/NBennett77270') Twitter
 
     nav.nav
       a(href='/')
