--- a/views/about.pug
+++ b/views/about.pug
@@ -16,7 +16,7 @@ block content
 
 
         .about-bio
-          p I am a new developer that has dabbled in full stack development for years. I've used PHP with MySql and MSSql in the past -- I am currently using JavaScript to develop node based applications. I'm studying full stack content on teamtreehouse.com and am completing the "Tech Degree" program they offer. Previously I have had job experience in help desk analyst positions where projects often went outside the scope of my job description. I have had HIPAA compliance training in my help desk analyst role -- so knowing confidentiality protocol is familiar.
+          p I am a new developer that has dabbled in full stack development for years. I've used PHP with MySql and MSSql in the past -- I am currently using JavaScript to develop node based applications. I'm studying full stack content on teamtreehouse.com and am completing the "Tech Degree" program they offer. Previously I have had job experience in help desk analyst positions where I thrived completing projects that often went outside the scope of my job description. I have had HIPAA compliance training in my help desk analyst role -- so knowing confidentiality and encryption protocol is familiar.
 
 
       .skills-contact-box.box
